# Claude_schism

./: .gitignore  README.md  agent.py  baseline.py  eval.py  procy.py  pyproject.toml  terminal.py  trace.py  ui.py
procy/: cli.py  evolve_engine.py  evolve_prompts.py  store.py  terminal.py  ui.py
proposals/: perf-interface.md
schism/: __init__.py  agent.py  cli.py  factory.py  installer.py  io.py  server.py  store.py  ui.py
scripts/: run_evolve_pipeline.py  train_proxy.py
tests/: test_command_mode.py  test_evolve_engine.py
tutorials/: graph-ann-optimization.md  jpeg-decoder-optimization.md  text-search-optimization.md
