[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schism"
version = "0.1.0"
description = "Claude Code tool discovery, factory, and management framework"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "mcp>=1.0",
]

[project.scripts]
schism = "schism.cli:main"

[tool.setuptools.packages.find]
include = ["schism*"]
